adjustment for InterpreterTests